<resources>
    <string name="app_name" translatable="false">DSR-Weather</string>

    <string name="with_next_day_forecast">with next day forecast</string>
    <string name="without_next_day_forecast">without next day forecast</string>
    <string name="add">Add</string>

    <string name="location_name">Location name</string>
    <string name="ok" translatable="false">OK</string>

    <string name="no_locations_text">You don\'t have any city to show weather.\nPlease, add city by tapping button below.</string>
    <string name="add_location">Add location</string>

    <string name="locations">Locations</string>
    <string name="forecast">Forecast</string>
    <string name="new_location">New location</string>

    <string name="all_locations">All locations</string>
    <string name="fav_locations">Liked locations</string>

    <string name="unknown_error">Unknown error</string>
    <string name="error_no_internet">Failed to load data. Check your Internet connection.</string>

    <string name="temperature_graph">Temperature graph</string>

    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="wind">Wind:</string>
    <string name="mm_hg">mm Hg</string>
    <string name="m_s">m/s</string>
    <string name="delete">Delete</string>

    <string name="unit">unit</string>
    <string name="choose_measure_system">Choose measure system</string>
    <string name="metric">metric</string>
    <string name="imperial">imperial</string>

    <string name="curr_temp">Current temperature</string>
    <string name="future_temp">Temperature tomorrow</string>

    <string name="google_maps_key" translatable="false">AIzaSyBLR3iEOULZSNtuNNhhGLIpTASvwxvVLg4</string>

    <string name="search">Search</string>
    <string name="nothing_found">By your request nothing found</string>

    <string name="text_if_no_triggers">Create triggers with weather conditions and be always on the alert!</string>
    <string name="triggers">Triggers</string>
    <string name="trigger_name">Trigger name (required)</string>
    <string name="trigger_details_title">Trigger settings</string>
    <string name="temp_celsius">Temperature °C (required)</string>
    <string name="temp_fahrenheit">Temperature °F (required)</string>
    <string name="wind_speed">Wind speed m/s</string>
    <string name="save">Save</string>
    <string name="date_start">Start date</string>
    <string name="date_end">End date</string>
    <string name="humidity_detail">Humidity %</string>
    <string name="required_fields">Please, fill all required fields.</string>
    <string name="new_trigger">New trigger</string>
    <string name="choose_location">Choose a location</string>

    <string name="default_notification_channel_id" translatable="false">alert_channel1</string>
    <string name="silent_notification_channel_id" translatable="false">alert_channel2</string>
    <string name="checking_for_updates">Checking for updates…</string>
    <string name="location_name_detail">Location name (required)</string>
</resources>