<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/details_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/details_withoutNextDay_rb">

        <RadioButton
            android:id="@+id/details_withNextDay_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/with_next_day_forecast"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/details_withoutNextDay_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/without_next_day_forecast"
            android:textColor="@color/black" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/details_finish_btn"
        style="@style/base_button_style"
        android:text="@string/add" />

</LinearLayout>