<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/triggerDetails_name_til"
            style="@style/trigger_til_style"
            android:hint="@string/trigger_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/triggerDetails_name_et"
                style="@style/trigger_et_style"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/triggerDetails_temp_til"
            style="@style/trigger_til_style"
            android:hint="@string/temp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/triggerDetails_temp_et"
                style="@style/trigger_et_style"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/triggerDetails_humidity_til"
            style="@style/trigger_til_style"
            android:hint="@string/humidity_detail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/triggerDetails_humidity_et"
                style="@style/trigger_et_style"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/triggerDetails_wind_til"
            style="@style/trigger_til_style"
            android:hint="@string/wind_speed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/triggerDetails_wind_et"
                style="@style/trigger_et_style"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/triggerDetails_dateStart_til"
            style="@style/trigger_til_style"
            android:hint="@string/date_start"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/triggerDetails_dateStart_et"
                style="@style/trigger_et_style"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/triggerDetails_dateEnd_til"
            style="@style/trigger_til_style"
            android:hint="@string/date_end"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/triggerDetails_dateEnd_et"
                style="@style/trigger_et_style"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/triggerDetails_save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:background="@color/black"
            android:text="@string/save"
            android:textColor="@color/white" />

      <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/triggerDetails_delete_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:background="@color/black"
            android:text="@string/delete"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>
